css/style.cssの変更

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ img.twitter_button:active{
 	top: 3px;
 }
 body { 
+text-align: center;
 background: url(../img/Back.PNG);
 font-family: "MS Pゴシック",Meiryo; 
   }
